#92 Bug fixes, code improvements