@@ -1,17 +1,16 @@
 package eu.trixner.base.server.auth.filters;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
+@RequiredArgsConstructor
 public class TokenHandler {
 
     private static final List<String> blackList = new ArrayList<>();
@@ -20,12 +19,15 @@ public class TokenHandler {
         return blackList;
     }
 
+    public final JwtUtils jwtUtils;
+
+
     /**
      * Runs every minute
      */
     @Scheduled(fixedRateString = "${jwt.token.removeStaleTokenRate}")
     public void cleanUp() {
-        List<String> toDelete = blackList.stream().filter(JwtUtils::isExpired).collect(Collectors.toList());
+        List<String> toDelete = blackList.stream().filter(jwtUtils::isExpired).toList();
         log.debug("Removing {} old Session Tokens", toDelete.size());
         blackList.removeAll(toDelete);
     }
